// Autogenerated with StateSmith 0.22.1-alpha-1+63e5c1c8f4246c6c2d862264aeda8f4ba0a27f54.
// Algorithm: Balanced2. See https://github.com/StateSmith/StateSmith/wiki/Algorithms

// Generated state machine
class V0_Control
{
    static EventId = 
    {
        DIM : 0,
        INC : 1,
    }
    static { Object.freeze(this.EventId); }
    
    static EventIdCount = 2;
    static { Object.freeze(this.EventIdCount); }
    
    static StateId = 
    {
        ROOT : 0,
        OFF : 1,
        ON1 : 2,
        ON2 : 3,
        ON3 : 4,
    }
    static { Object.freeze(this.StateId); }
    
    static StateIdCount = 5;
    static { Object.freeze(this.StateIdCount); }
    
    // Subtree meta data generation can be disabled in settings.
    // Details: https://github.com/StateSmith/StateSmith/issues/538
    static ROOT_SubtreeEndId = 4;  // State 'V0_Control' subtree extends from itself (id: 0) to state 'ON3' (id: 4)
    static { Object.freeze(this.ROOT_SubtreeEndId); }
    static OFF_SubtreeEndId = 1;  // State 'OFF' subtree extends from itself (id: 1) to state 'OFF' (id: 1)
    static { Object.freeze(this.OFF_SubtreeEndId); }
    static ON1_SubtreeEndId = 2;  // State 'ON1' subtree extends from itself (id: 2) to state 'ON1' (id: 2)
    static { Object.freeze(this.ON1_SubtreeEndId); }
    static ON2_SubtreeEndId = 3;  // State 'ON2' subtree extends from itself (id: 3) to state 'ON2' (id: 3)
    static { Object.freeze(this.ON2_SubtreeEndId); }
    static ON3_SubtreeEndId = 4;  // State 'ON3' subtree extends from itself (id: 4) to state 'ON3' (id: 4)
    static { Object.freeze(this.ON3_SubtreeEndId); }
    
    // Used internally by state machine. Feel free to inspect, but don't modify.
    stateId;
    
    // Starts the state machine. Must be called before dispatching events. Not thread safe.
    start()
    {
        this.#ROOT_enter();
        // ROOT behavior
        // uml: TransitionTo(ROOT.<InitialState>)
        {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition). Already at LCA, no exiting required.
            
            // Step 2: Transition action: ``.
            
            // Step 3: Enter/move towards transition target `ROOT.<InitialState>`.
            // ROOT.<InitialState> is a pseudo state and cannot have an `enter` trigger.
            
            // ROOT.<InitialState> behavior
            // uml: TransitionTo(OFF)
            {
                // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition). Already at LCA, no exiting required.
                
                // Step 2: Transition action: ``.
                
                // Step 3: Enter/move towards transition target `OFF`.
                this.#OFF_enter();
                
                // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
                return;
            } // end of behavior for ROOT.<InitialState>
        } // end of behavior for ROOT
    }
    
    // Dispatches an event to the state machine. Not thread safe.
    // Note! This function assumes that the `eventId` parameter is valid.
    dispatchEvent(eventId)
    {
        switch (this.stateId)
        {
            // STATE: V0_Control
            case V0_Control.StateId.ROOT:
                // No events handled by this state (or its ancestors).
                break;
            
            // STATE: OFF
            case V0_Control.StateId.OFF:
                switch (eventId)
                {
                    case V0_Control.EventId.INC: this.#OFF_inc(); break;
                }
                break;
            
            // STATE: ON1
            case V0_Control.StateId.ON1:
                switch (eventId)
                {
                    case V0_Control.EventId.DIM: this.#ON1_dim(); break;
                    case V0_Control.EventId.INC: this.#ON1_inc(); break;
                }
                break;
            
            // STATE: ON2
            case V0_Control.StateId.ON2:
                switch (eventId)
                {
                    case V0_Control.EventId.INC: this.#ON2_inc(); break;
                    case V0_Control.EventId.DIM: this.#ON2_dim(); break;
                }
                break;
            
            // STATE: ON3
            case V0_Control.StateId.ON3:
                switch (eventId)
                {
                    case V0_Control.EventId.DIM: this.#ON3_dim(); break;
                }
                break;
        }
        
    }
    
    // This function is used when StateSmith doesn't know what the active leaf state is at
    // compile time due to sub states or when multiple states need to be exited.
    #exitUpToStateHandler(desiredState)
    {
        while (this.stateId != desiredState)
        {
            switch (this.stateId)
            {
                case V0_Control.StateId.OFF: this.#OFF_exit(); break;
                
                case V0_Control.StateId.ON1: this.#ON1_exit(); break;
                
                case V0_Control.StateId.ON2: this.#ON2_exit(); break;
                
                case V0_Control.StateId.ON3: this.#ON3_exit(); break;
                
                default: return;  // Just to be safe. Prevents infinite loop if state ID memory is somehow corrupted.
            }
        }
    }
    
    
    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state ROOT
    ////////////////////////////////////////////////////////////////////////////////
    
    #ROOT_enter()
    {
        this.stateId = V0_Control.StateId.ROOT;
    }
    
    
    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state OFF
    ////////////////////////////////////////////////////////////////////////////////
    
    #OFF_enter()
    {
        this.stateId = V0_Control.StateId.OFF;
        
        // OFF behavior
        // uml: enter / { Lights_off(); }
        {
            // Step 1: execute action `Lights_off();`
            Lights_off();
        } // end of behavior for OFF
    }
    
    #OFF_exit()
    {
        this.stateId = V0_Control.StateId.ROOT;
    }
    
    #OFF_inc()
    {
        // OFF behavior
        // uml: INC TransitionTo(ON1)
        {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
            this.#OFF_exit();
            
            // Step 2: Transition action: ``.
            
            // Step 3: Enter/move towards transition target `ON1`.
            this.#ON1_enter();
            
            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return;
        } // end of behavior for OFF
        
        // No ancestor handles this event.
    }
    
    
    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state ON1
    ////////////////////////////////////////////////////////////////////////////////
    
    #ON1_enter()
    {
        this.stateId = V0_Control.StateId.ON1;
        
        // ON1 behavior
        // uml: enter / { Lights_set(1,0,0); }
        {
            // Step 1: execute action `Lights_set(1,0,0);`
            Lights_set(1,0,0);
        } // end of behavior for ON1
    }
    
    #ON1_exit()
    {
        this.stateId = V0_Control.StateId.ROOT;
    }
    
    #ON1_dim()
    {
        // ON1 behavior
        // uml: DIM TransitionTo(OFF)
        {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
            this.#ON1_exit();
            
            // Step 2: Transition action: ``.
            
            // Step 3: Enter/move towards transition target `OFF`.
            this.#OFF_enter();
            
            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return;
        } // end of behavior for ON1
        
        // No ancestor handles this event.
    }
    
    #ON1_inc()
    {
        // ON1 behavior
        // uml: INC TransitionTo(ON2)
        {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
            this.#ON1_exit();
            
            // Step 2: Transition action: ``.
            
            // Step 3: Enter/move towards transition target `ON2`.
            this.#ON2_enter();
            
            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return;
        } // end of behavior for ON1
        
        // No ancestor handles this event.
    }
    
    
    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state ON2
    ////////////////////////////////////////////////////////////////////////////////
    
    #ON2_enter()
    {
        this.stateId = V0_Control.StateId.ON2;
        
        // ON2 behavior
        // uml: enter / { Lights_set(1,1,0); }
        {
            // Step 1: execute action `Lights_set(1,1,0);`
            Lights_set(1,1,0);
        } // end of behavior for ON2
        
        // ON2 behavior
        // uml: enter / { count = 0; }
        {
            // Step 1: execute action `count = 0;`
            count = 0;
        } // end of behavior for ON2
    }
    
    #ON2_exit()
    {
        this.stateId = V0_Control.StateId.ROOT;
    }
    
    #ON2_dim()
    {
        // ON2 behavior
        // uml: DIM TransitionTo(ON1)
        {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
            this.#ON2_exit();
            
            // Step 2: Transition action: ``.
            
            // Step 3: Enter/move towards transition target `ON1`.
            this.#ON1_enter();
            
            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return;
        } // end of behavior for ON2
        
        // No ancestor handles this event.
    }
    
    #ON2_inc()
    {
        // ON2 behavior
        // uml: 1. INC / { count++; }
        {
            // Step 1: execute action `count++;`
            count++;
        } // end of behavior for ON2
        
        // ON2 behavior
        // uml: INC [count >= 3] TransitionTo(ON3)
        if (count >= 3)
        {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
            this.#ON2_exit();
            
            // Step 2: Transition action: ``.
            
            // Step 3: Enter/move towards transition target `ON3`.
            this.#ON3_enter();
            
            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return;
        } // end of behavior for ON2
        
        // No ancestor handles this event.
    }
    
    
    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state ON3
    ////////////////////////////////////////////////////////////////////////////////
    
    #ON3_enter()
    {
        this.stateId = V0_Control.StateId.ON3;
        
        // ON3 behavior
        // uml: enter / { Lights_set(1,1,1); }
        {
            // Step 1: execute action `Lights_set(1,1,1);`
            Lights_set(1,1,1);
        } // end of behavior for ON3
    }
    
    #ON3_exit()
    {
        this.stateId = V0_Control.StateId.ROOT;
    }
    
    #ON3_dim()
    {
        // ON3 behavior
        // uml: DIM TransitionTo(ON2)
        {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
            this.#ON3_exit();
            
            // Step 2: Transition action: ``.
            
            // Step 3: Enter/move towards transition target `ON2`.
            this.#ON2_enter();
            
            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return;
        } // end of behavior for ON3
        
        // No ancestor handles this event.
    }
    
    // Thread safe. This function can be disabled with `outputStateIdToStringFunction` setting.
    static stateIdToString(id)
    {
        switch (id)
        {
            case V0_Control.StateId.ROOT: return "ROOT";
            case V0_Control.StateId.OFF: return "OFF";
            case V0_Control.StateId.ON1: return "ON1";
            case V0_Control.StateId.ON2: return "ON2";
            case V0_Control.StateId.ON3: return "ON3";
            default: return "?";
        }
    }
    
    // Thread safe. This function can be disabled with `outputEventIdToStringFunction` setting.
    static eventIdToString(id)
    {
        switch (id)
        {
            case V0_Control.EventId.DIM: return "DIM";
            case V0_Control.EventId.INC: return "INC";
            default: return "?";
        }
    }
    
    // Returns the parent state for a given state. Returns ROOT if input has no parent.
    // Thread safe. This function can be disabled with `outputGetParentIdFunction` setting.
    static getParentId(id)
    {
        switch (id)
        {
            case V0_Control.StateId.ROOT: return V0_Control.StateId.ROOT;
            case V0_Control.StateId.OFF: return V0_Control.StateId.ROOT;
            case V0_Control.StateId.ON1: return V0_Control.StateId.ROOT;
            case V0_Control.StateId.ON2: return V0_Control.StateId.ROOT;
            case V0_Control.StateId.ON3: return V0_Control.StateId.ROOT;
            default: return V0_Control.StateId.ROOT;
        }
    }
}
